Build system fixes

--- a/agent/CMakeLists.txt
+++ b/agent/CMakeLists.txt
@@ -8,6 +8,7 @@ if(NOT WIN32)
 endif()
 
 find_package(OpenSSL 2.0.0 REQUIRED)
+find_package(LibSSH2 1.8.0 REQUIRED)
 find_package(CURL 7.64.0 REQUIRED)
 
 include(CheckIncludeFiles)
@@ -177,12 +178,10 @@ target_link_libraries(agent rabbitmq-static)
 target_include_directories(agent PRIVATE ${CURL_INCLUDE_DIRS})
 target_link_libraries(agent ${CURL_LIBRARIES})
 
-
 target_include_directories(agent PRIVATE ${OPENSSL_INCLUDE_DIR})
 target_link_libraries(agent ${OPENSSL_LIBRARIES})
 
-# Hacky fix for now
-target_link_libraries(agent /home/zane/Desktop/abuild/prefix/lib/libssh2.a)
+target_link_libraries(agent ${LIBSSH2_LIBRARY})
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
 	target_link_libraries(agent stdc++fs)
