--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(nimrodg-agent)
 
 enable_language(C CXX)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
+
 set(OPENSSL_USE_STATIC_LIBS ON CACHE BOOL "" FORCE)
 
 function(add_uriparser)
