Update uriparser to 0.9.3 and start tracking upstream now that it supports CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,12 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 set(OPENSSL_USE_STATIC_LIBS ON CACHE BOOL "" FORCE)
 
 function(add_uriparser)
-	set(URIPARSER_BUILD_URIPARSE	OFF CACHE BOOL "" FORCE)
+	set(BUILD_SHARED_LIBS		OFF CACHE BOOL "" FORCE)
+	set(URIPARSER_BUILD_DOCS	OFF CACHE BOOL "" FORCE)
+	set(URIPARSER_BUILD_TESTS	OFF CACHE BOOL "" FORCE)
+	set(URIPARSER_BUILD_TOOLS	OFF CACHE BOOL "" FORCE)
+	set(URIPARSER_BUILD_CHAR	ON CACHE BOOL "" FORCE)
+	set(URIPARSER_BUILD_WCHAR_T	OFF CACHE BOOL "" FORCE)
 	add_subdirectory(uriparser)
 endfunction(add_uriparser)
 
