--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,8 @@
 	branch = release-4.0
 [submodule "uriparser"]
 	path = uriparser
-	url = https://github.com/UQ-RCC/uriparser
-	branch = nimrod
+	url = https://github.com/uriparser/uriparser
+	branch = master
 [submodule "rabbitmq-c"]
 	path = rabbitmq-c
 	url = https://github.com/alanxz/rabbitmq-c
