cleanup the curl header handling

--- a/agent/include/config.h.in
+++ b/agent/include/config.h.in
@@ -20,10 +20,10 @@
 #	define NIMRODG_GITVERSION "UNKNOWN"
 #endif
 
-#define NIMRODG_AGENT_VERSION_STRING "Nimrod/G Agent, version " NIMRODG_GITVERSION " (" NIMRODG_PLATFORM_STRING ")"
-#define NIMRODG_USER_AGENT	"NimrodG/" NIMRODG_GITVERSION " (" NIMRODG_PLATFORM_STRING ")"
-
-#define NIMRODG_AGENT_API
+#define NIMRODG_AGENT_VERSION_STRING    "Nimrod/G Agent, version " NIMRODG_GITVERSION " (" NIMRODG_PLATFORM_STRING ")"
+#define NIMRODG_HTTP_USER_AGENT         "NimrodG/" NIMRODG_GITVERSION " (" NIMRODG_PLATFORM_STRING ")"
+#define NIMRODG_HTTP_HEADER_UUID        "X-NimrodG-Agent-UUID"
+#define NIMRODG_HTTP_HEADER_TOKEN       "X-NimrodG-File-Auth-Token"
 
 #cmakedefine NIMRODG_USE_WIN32API
 #cmakedefine NIMRODG_USE_POSIX
