--- a/agent/include/config.h.in
+++ b/agent/include/config.h.in
@@ -10,18 +10,10 @@
 
 #cmakedefine NIMRODG_PLATFORM_STRING "@NIMRODG_PLATFORM_STRING@"
 
-#cmakedefine NIMRODG_GITVERSION "@NIMRODG_GITVERSION@"
-
 #if !defined(NIMRODG_PLATFORM_STRING)
 #	error No platform string defined
 #endif
 
-#if !defined(NIMRODG_GITVERSION)
-#	define NIMRODG_GITVERSION "UNKNOWN"
-#endif
-
-#define NIMRODG_AGENT_VERSION_STRING    "Nimrod/G Agent, version " NIMRODG_GITVERSION " (" NIMRODG_PLATFORM_STRING ")"
-#define NIMRODG_HTTP_USER_AGENT         "NimrodG/" NIMRODG_GITVERSION " (" NIMRODG_PLATFORM_STRING ")"
 #define NIMRODG_HTTP_HEADER_UUID        "X-NimrodG-Agent-UUID"
 #define NIMRODG_HTTP_HEADER_TOKEN       "X-NimrodG-File-Auth-Token"
 
@@ -32,6 +24,26 @@
 #   define NIMRODG_DEVNULL "NUL"
 #elif defined(NIMRODG_USE_POSIX)
 #   define NIMRODG_DEVNULL "/dev/null"
+#endif
+
+typedef struct
+{
+	const char *git_sha1;
+	const char *git_description;
+	const char *git_local_changes;
+	const char *platform_string;
+	const char *version_string;
+	const char *description;
+	const char *user_agent;
+	const char *dev_null;
+} compile_info_t;
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+extern const compile_info_t g_compile_info;
+#ifdef __cplusplus
+}
 #endif
 
 /** @endcond */
