Add "environment" option to configuration file

--- a/config.json
+++ b/config.json
@@ -15,5 +15,9 @@
   },
   "batch": true,
   "output": "console",
-  "nohup": true
+  "nohup": true,
+  "environment": {
+    "X": "Y",
+    "Z": "W"
+  }
 }
