agent/settings: add '--secret-key' pararmeter and secret_key config option
Defaults to empty if not specified.

--- a/config.json
+++ b/config.json
@@ -16,6 +16,7 @@
   "batch": false,
   "output": "console",
   "nohup": true,
+  "secret_key": "abc123",
   "environment": {
     "X": "Y",
     "Z": "W"
