--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,11 @@ function(add_rabbitmqc)
 	set(ENABLE_SSL_SUPPORT		ON	CACHE BOOL "" FORCE)
 	set(ENABLE_THREAD_SAFETY	ON	CACHE BOOL "" FORCE)
 	add_subdirectory(rabbitmq-c)
-	#target_compile_definitions(amqp-cpp PUBLIC AMQPP_STATIC_LIB)
-	#target_include_directories(rabbitmq INTERFACE "./rabbitmq-c/librabbitmq")
-	target_include_directories(rabbitmq-static INTERFACE "./rabbitmq-c/librabbitmq")
+
+	# Hack to workaround the new install()
+	add_library(rabbitmq-c2 INTERFACE)
+	target_include_directories(rabbitmq-c2 INTERFACE rabbitmq-c/librabbitmq)
+	target_link_libraries(rabbitmq-c2 INTERFACE rabbitmq-static)
 endfunction(add_rabbitmqc)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
