nim1: add time functions
Adds the nanotime_t type, represents the time since the UNIX epoch in
nanoseconds.

Functions:
* nanotime_t nim1::current_time() noexcept
* int nim1::to_iso8601(nanotime_t nt, iso8601_format_t fmt, iso8601_string_t iso) noexcept
* int nim1::parse_iso8601(const char *s, iso8601_format_t fmt, nanotime_t& nt) noexcept
* int nim1::parse_iso8601(std::string_view s, iso8601_format_t fmt, nanotime_t& nt) noexcept

--- a/nim1/CMakeLists.txt
+++ b/nim1/CMakeLists.txt
@@ -8,6 +8,9 @@ add_library(nim1 STATIC
 
 		./make_view.cpp
 		./include/nim1/make_view.hpp
+
+		./time.cpp
+		./include/nim1/time.hpp
 )
 
 set_target_properties(nim1 PROPERTIES
