nim1: add crypto functionality for message signing

--- a/nim1/CMakeLists.txt
+++ b/nim1/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(nim1)
 
+find_package(OpenSSL 2.0.0 REQUIRED)
+
 add_library(nim1 STATIC
 		./nim1.cpp
 		./include/nim1/nim1.hpp
@@ -14,6 +16,24 @@ add_library(nim1 STATIC
 
 		./lc.cpp
 		./include/nim1/lc.hpp
+
+		./crypto_exception.cpp
+		./include/nim1/crypto_exception.hpp
+
+		./evpbuf.cpp
+		./include/nim1/evpbuf.hpp
+
+		./hmacbuf.cpp
+		./include/nim1/hmacbuf.hpp
+
+		./strbuf.cpp
+		./include/nim1/strbuf.hpp
+
+		./auth_header.cpp
+		./include/nim1/auth_header.hpp
+
+		./signature.cpp
+		./include/nim1/signature.hpp
 )
 
 set_target_properties(nim1 PROPERTIES
@@ -22,6 +42,8 @@ set_target_properties(nim1 PROPERTIES
 )
 target_link_libraries(nim1 PUBLIC
 		rabbitmq-c2
+		OpenSSL::Crypto
 )
 
 target_include_directories(nim1 PUBLIC include)
+
