--- a/agent/CMakeLists.txt
+++ b/agent/CMakeLists.txt
@@ -13,14 +13,24 @@ find_package(OpenSSL 2.0.0 REQUIRED)
 pkg_check_modules(CURL REQUIRED libcurl>=7.64.0)
 pkg_check_modules(LIBUUID REQUIRED uuid>=2.36.0)
 
-add_library(CURL::libcurl STATIC IMPORTED)
-set_target_properties(CURL::libcurl PROPERTIES
-	INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${CURL_STATIC_INCLUDE_DIRS}"
-	INTERFACE_COMPILE_DEFINITIONS        CURL_STATICLIB
-	INTERFACE_LINK_LIBRARIES             "${CURL_STATIC_LIBRARIES}"
-	IMPORTED_LINK_INTERFACE_LANGUAGES    C
-	IMPORTED_LOCATION                    "${CURL_LINK_LIBRARIES}"
-)
+if(LIBCURL_USE_STATIC_LIBS)
+	add_library(CURL::libcurl STATIC IMPORTED)
+	set_target_properties(CURL::libcurl PROPERTIES
+		INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${CURL_STATIC_INCLUDE_DIRS}"
+		INTERFACE_COMPILE_DEFINITIONS        CURL_STATICLIB
+		INTERFACE_LINK_LIBRARIES             "${CURL_STATIC_LIBRARIES}"
+		IMPORTED_LINK_INTERFACE_LANGUAGES    C
+		IMPORTED_LOCATION                    "${CURL_LINK_LIBRARIES}"
+	)
+else()
+	add_library(CURL::libcurl SHARED IMPORTED)
+	set_target_properties(CURL::libcurl PROPERTIES
+		INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${CURL_INCLUDE_DIRS}"
+		INTERFACE_LINK_LIBRARIES             "${CURL_LIBRARIES}"
+		IMPORTED_LINK_INTERFACE_LANGUAGES    C
+		IMPORTED_LOCATION                    "${CURL_LINK_LIBRARIES}"
+	)
+endif()
 
 if(LIBUUID_USE_STATIC_LIBS)
 	add_library(LibUUID::LibUUID STATIC IMPORTED)
