agent/config: add compile_info_t::git::hash_short

--- a/agent/config.cpp.in
+++ b/agent/config.cpp.in
@@ -12,6 +12,7 @@
 const compile_info_t g_compile_info = {
 	.git = {
 		.hash			= "@GIT_HASH@",
+		.hash_short     = "@GIT_HASH_SHORT@",
 		.description	= "@GIT_DESCRIBE@",
 	},
 	.version = {
