--- a/agent/CMakeLists.txt
+++ b/agent/CMakeLists.txt
@@ -87,6 +87,8 @@ if(GIT_DESCRIBE MATCHES "-NOTFOUND$")
 	set(GIT_DESCRIBE "UNKNOWN")
 endif()
 
+string(SUBSTRING ${GIT_HASH} 0 7 GIT_HASH_SHORT)
+
 get_target_property(UUID_VERSION_STRING LibUUID::LibUUID VERSION)
 
 if(NOT NIMRODG_PLATFORM_STRING)
