--- a/agent/config.cpp.in
+++ b/agent/config.cpp.in
@@ -28,7 +28,7 @@ const compile_info_t g_compile_info = {
 		.protocol		= NIMRODG_XSTR(NIMRODG_VERSION_MAJOR),
 		.platform		= "@NIMRODG_PLATFORM_STRING@",
 		.description	= "Nimrod/G Agent, version " NIMRODG_VERSION_STRING " (@NIMRODG_PLATFORM_STRING@)",
-		.user_agent		= "NimrodG/" NIMRODG_VERSION_STRING " (@NIMRODG_PLATFORM_STRING@; git:@GIT_DESCRIBE@)",
+		.user_agent		= "NimrodG/" NIMRODG_VERSION_STRING " (@NIMRODG_PLATFORM_STRING@; git:@GIT_HASH_SHORT@)",
 		.dev_null		= NIMRODG_DEVNULL,
 	}
 };
