agent: embed libuuid
From util-linux v2.36.1. util-linux isn't packaged for Windows,
and it's small enough that I don't mind vendoring it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,9 +70,9 @@ set(NIMRODG_OUTPUT_DIRECTORY ${NIMRODG_OUTPUT_DIRECTORY} CACHE STRING "Agent Ins
 add_rabbitmqc()
 
 add_subdirectory(fmt)
+add_subdirectory(libuuid)
 add_subdirectory(nim1)
 add_subdirectory(agent)
-
 
 option(USE_LTO "Use LTO" OFF)
 if(USE_LTO)
